[TASK] Dynamic node attributes via config

--- a/config.default.json
+++ b/config.default.json
@@ -6,10 +6,69 @@
   "nodeZoom": 18,
   "labelZoom": 13,
   "clientZoom": 15,
-  "nodeInfobox": {
-    "contact": false,
-    "hardwareUsage": true
-  },
+  "nodeAttr": [
+    // value can be a node attribute (1 depth) or a a function in utils/node with prefix show
+    {
+      "name": "node.status",
+      "value": "Status"
+    },
+    {
+      "name": "node.gateway",
+      "value": "Gateway"
+    },
+    {
+      "name": "node.coordinates",
+      "value": "GeoURI"
+    },
+//    {
+//      "name": "node.contact",
+//      "value": "owner"
+//    },
+    {
+      "name": "node.hardware",
+      "value": "model"
+    },
+    {
+      "name": "node.primaryMac",
+      "value": "mac"
+    },
+    {
+      "name": "node.firmware",
+      "value": "Firmware"
+    },
+    {
+      "name": "node.uptime",
+      "value": "Uptime"
+    },
+    {
+      "name": "node.firstSeen",
+      "value": "FirstSeen"
+    },
+    {
+      "name": "node.systemLoad",
+      "value": "Load"
+    },
+    {
+      "name": "node.ram",
+      "value": "RAM"
+    },
+    {
+      "name": "node.ipAddresses",
+      "value": "IPs"
+    },
+    {
+      "name": "node.update",
+      "value": "Autoupdate"
+    },
+    {
+      "name": "node.site",
+      "value": "Site"
+    },
+    {
+      "name": "node.clients",
+      "value": "Clients"
+    }
+  ],
   "supportedLocale": [
     "en",
     "de",
