--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "ffrgb-meshviewer",
+  "name": "meshviewer",
+  "version": "10.0.0",
   "license": "AGPL-3.0",
   "repository": {
     "type": "git",
