--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,7 +2,7 @@
   "extends": "stylelint-config-standard",
   "rules": {
     "at-rule-no-unknown": [true, {
-      "ignoreAtRules": ["function", "if", "each", "include", "mixin"]
+      "ignoreAtRules": ["function", "if", "each", "include", "mixin", "extend"]
     }],
     "number-leading-zero": "never",
     "no-descending-specificity": null
