--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "leaflet": "^1.3.1",
     "moment": "^2.22.2",
     "navigo": "^7.1.2",
-    "node-polyglot": "^2.3.0",
+    "node-polyglot": "2.2.2",
     "promise-polyfill": "^8.0.0",
     "rbush": "^2.0.2",
     "requirejs": "^2.3.5",
