--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "url": "https://github.com/ffrgb/meshviewer/issues"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "browser-sync": "^2.24.5",
-    "eslint": "^5.1.0",
+    "babel-eslint": "^9.0.0",
+    "browser-sync": "^2.24.7",
+    "eslint": "^5.4.0",
     "eslint-config-airbnb-es5": "^1.2.0",
     "eslint-config-defaults": "^9.0.0",
-    "eslint-plugin-react": "^7.10.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-cache-bust": "^1.3.0",
+    "eslint-plugin-react": "^7.11.1",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-cache-bust": "^1.4.0",
     "gulp-cli": "^2.0.1",
     "gulp-environments": "^0.1.2",
     "gulp-eslint": "^5.0.0",
@@ -32,7 +32,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.1"
   },
   "eslintConfig": {
     "env": {
@@ -44,17 +44,17 @@
   },
   "dependencies": {
     "almond": "^0.3.3",
-    "d3-drag": "^1.2.1",
-    "d3-force": "^1.1.0",
-    "d3-selection": "^1.3.0",
-    "d3-zoom": "^1.7.1",
-    "leaflet": "^1.3.3",
+    "d3-drag": "^1.2.3",
+    "d3-force": "^1.1.2",
+    "d3-selection": "^1.3.2",
+    "d3-zoom": "^1.7.3",
+    "leaflet": "^1.3.4",
     "moment": "^2.22.2",
     "navigo": "^7.1.2",
     "node-polyglot": "2.2.2",
-    "promise-polyfill": "^8.0.0",
+    "promise-polyfill": "^8.1.0",
     "rbush": "^2.0.2",
-    "requirejs": "^2.3.5",
+    "requirejs": "^2.3.6",
     "snabbdom": "^0.7.1"
   },
   "scripts": {
