--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,6 @@ rules:
   "func-names": 0
   "guard-for-in": 0
   "no-undefined": 0
+  "consistent-return": 0
   "no-nested-ternary": 0
   "no-extend-native": ["error", { "exceptions": ["String"] }]
