travis: Added cp command

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,5 @@ before_script:
   - if git status | grep -q "modified.   \.travis\.yml"; then echo "Dirty yarn.lock"; exit 1; fi
 
 script:
+  - cp config.ffrgb.js config.js
   - gulp
