--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-es5": "^1.2.0",
     "eslint-config-defaults": "^9.0.0",
