--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "gulp-eslint": "^5.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-inject": "^5.0.2",
+    "gulp-inline-source": "^4.0.0",
     "gulp-jsonminify": "^1.1.0",
-    "gulp-kyh-inline-source": "^3.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-real-favicon": "^0.3.0",
     "gulp-requirejs-optimize": "^1.3.0",
