--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,12 @@ os:
 
 matrix:
   include:
-  - node_js: 8
+  - node_js: "8"
     os: linux
-  - node_js: 11
+  - node_js: "11"
     os: linux
-
+  - node_js: "12"
+    os: linux
 cache:
   yarn: true
 
