--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "gulp-real-favicon": "^0.3.2",
     "gulp-requirejs-optimize": "^1.3.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-stylelint": "^13.0.0",
+    "gulp-uglify": "^3.0.2",
+    "stylelint": "^13.3.2",
+    "stylelint-config-standard": "^20.0.0"
   },
   "eslintConfig": {
     "env": {
