--- a/.github/workflows/release-meshviewer.yml
+++ b/.github/workflows/release-meshviewer.yml
@@ -18,25 +18,24 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run gulp
-    - name: Package Build
-        run: "zip -r -j meshviewer-build.zip build/*"
+    - run: "zip -r -j meshviewer-build.zip build/*"
     - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
-          prerelease: false
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: true
+        prerelease: false
     - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./meshviewer-build.zip
-          asset_name: meshviewer-build.zip
-          asset_content_type: application/zip
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./meshviewer-build.zip
+        asset_name: meshviewer-build.zip
+        asset_content_type: application/zip
