Add Deprecation Warning (#1)
* Prepare Deprecation Warning in Infobox

* Deprecation Warning: Add Content

* Add some styling

* Deprecation: Add device list and cleanup

* Make deprecation_warning configurable

* Documentation and Deprecation Warning text improvements

--- a/config.json.example
+++ b/config.json.example
@@ -73,5 +73,7 @@
         "image": "https://freifunk.fail/render/dashboard-solo/db/deck?&panelId=22&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
         "title": "Bild der Wochenstatistik"
       }
-    ]
+    ],
+    "deprecation_text": "Hier kann ein eigener Text für die Deprecation Warning (inkl. HTML) stehen!",
+    "deprecation_enabled": true
   }
