--- a/.github/workflows/build-meshviewer.yml
+++ b/.github/workflows/build-meshviewer.yml
@@ -18,4 +18,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm run audit
     - run: npm run gulp-ci
