--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.3",
     "del": "^6.0.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb-es5": "^1.2.0",
     "eslint-config-defaults": "^9.0.0",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "gulp": "^4.0.1",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-cache-bust": "^1.4.0",
     "gulp-cli": "^2.3.0",
     "gulp-environments": "^1.0.1",
@@ -27,13 +27,14 @@
     "gulp-inject": "^5.0.2",
     "gulp-inline-source": "^4.0.0",
     "gulp-jsonminify": "^1.1.0",
-    "gulp-load-plugins": "^2.0.6",
+    "gulp-load-plugins": "^2.0.7",
     "gulp-real-favicon": "^0.3.0",
     "gulp-requirejs-optimize": "^1.3.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint": "^13.0.0",
     "gulp-uglify": "^3.0.2",
+    "sass": "^1.35.1",
     "stylelint": "^13.10.0",
     "stylelint-config-standard": "^22.0.0"
   },
