--- a/config.json.example
+++ b/config.json.example
@@ -37,31 +37,31 @@
     "nodeInfos": [
       {
         "name": "Clientstatistik",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_NAME}&from=now-7d&to=now",
+        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
         "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=7&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
         "title": "Knoten {NODE_ID} ({NODE_NAME})"
       },
       {
         "name": "Traffic",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_NAME}&from=now-7d&to=now",
+        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
         "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=1&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
         "title": "Knoten {NODE_ID} ({NODE_NAME})"
       },
       {
         "name": "Uptime",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_NAME}&from=now-7d&to=now",
+        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
         "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=5&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
         "title": "Knoten {NODE_ID} ({NODE_NAME})"
       },
       {
         "name": "CPU Auslastung",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_NAME}&from=now-7d&to=now",
+        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
         "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=2&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
         "title": "Knoten {NODE_ID} ({NODE_NAME})"
       },
       {
         "name": "Neighbours",
-        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_NAME}&from=now-7d&to=now",
+        "href": "https://freifunk.fail/dashboard/db/nodes?var-name={NODE_CUSTOM}&from=now-7d&to=now",
         "image": "https://freifunk.fail/render/dashboard-solo/db/node-details-for-map?panelId=4&var-id={NODE_ID}&from=now-7d&to=now&width=600&height=300&theme=light&_t={TIME}",
         "title": "Knoten {NODE_ID} ({NODE_NAME})"
       }
@@ -74,6 +74,7 @@
         "title": "Bild der Wochenstatistik"
       }
     ],
+    "node_custom": "/[^a-z0-9\\-\\.]/ig",
     "deprecation_text": "Hier kann ein eigener Text für die Deprecation Warning (inkl. HTML) stehen!",
     "deprecation_enabled": true
   }
