--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "requirejs": "^2.3.6",
     "snabbdom": "^0.7.4"
   },
+  "optionalDependencies": {
+    "fsevents": "^2.0.7"
+  },
   "scripts": {
     "gulp": "./node_modules/gulp-cli/bin/gulp.js",
     "gulp-ci": "gulp ci",
