--- a/.github/workflows/build-meshviewer.yml
+++ b/.github/workflows/build-meshviewer.yml
@@ -2,7 +2,7 @@ name: Build Meshviewer
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
