--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Generic cache files
+*~
+.~*
+*.tmp
+*.temp
+*.DS_Store
+.*.swp
+*.out
+*.cache
+Thumbs.db
+
+# IDE files
+/.idea/
+
+# Project files
 node_modules/
 build/
 config.js
